<resources>
    <string name="app_name">Tienda Online</string>
    <string name="texto_largo_de_prueba">Texto largo de prueba</string>
    <string name="mensaje_inicio">¡Encuentra lo que necesitas al mejor precio y sin complicaciones! Explora miles de productos únicos, desde tu bolsillo. ¡Tu próxima compra está a un clic de distancia!</string>
    <string name="comienza">Comienza</string>
    <string name="registrate">Registrate</string>
    <string name="correo_electronico">Correo Electrónico</string>
    <string name="inicia_sesi_n_con_google">Inicia sesión con Google</string>
    <string name="contrase_a">Contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="documento">Documento</string>
    <string name="imagen_del_producto">Imagen del producto</string>
    <string name="nombre_del_producto">Nombre del producto</string>
    <string name="tienda_virtual">Tienda virtual</string>
    <string name="ingresar">Ingresar</string>
    <string name="ubicaci_n_1">Ubicación 1</string>
    <string name="ubicaci_n_3">Ubicación 3</string>
    <string name="ubicaci_n_2">Ubicación 2</string>
    <string name="comprar">Comprar</string>
    <string name="carrito_de_compras">Carrito de compras</string>
    <string name="vaciar_carrito">Vaciar carrito</string>
    <string name="nombre_producto">Nombre producto</string>
    <string name="_0_00">$0.00</string>
    <string name="registrarse">Registrarse</string>
    <string name="add_item">Add Item</string>
    <string name="detalle_del_producto">Detalle</string>
    <string name="precio">Precio</string>
    <string name="imagen">Imagen</string>
    <string name="seleccionar_imagen">Seleccionar Imagen</string>
    <string name="agregar_producto">Agregar Producto</string>
    <string name="tomar_foto">Tomar Foto</string>
</resources>