<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_logo_login"
            android:layout_width="170dp"
            android:layout_height="170dp"
            app:srcCompat="@drawable/logo" />

        <LinearLayout
            android:id="@+id/ly_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="fill_vertical"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/iv_nombre"
                style="@style/EditTextRoundedCircle"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="40dp"
                android:background="@color/black"
                app:srcCompat="@drawable/avatar" />

            <EditText
                android:id="@+id/edt_nombre"
                style="@style/EditTextRounded"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:hint="@string/nombre" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_documento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="fill_vertical"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_documento"
                style="@style/EditTextRoundedCircle"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="40dp"
                android:background="@color/white"
                app:srcCompat="@drawable/documento" />


            <EditText
                android:id="@+id/edt_documento"
                style="@style/EditTextRounded"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:hint="@string/documento" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="fill_vertical"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_email"
                style="@style/EditTextRoundedCircle"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="40dp"
                android:background="@color/white"
                app:srcCompat="@drawable/usuario" />


            <EditText
                android:id="@+id/edt_email_login"
                style="@style/EditTextRounded"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:hint="@string/correo_electronico" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="fill_vertical"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_password"
                style="@style/EditTextRoundedCircle"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="40dp"
                android:background="@color/white"
                app:srcCompat="@drawable/llave" />


            <EditText
                android:id="@+id/edt_pass_login"
                style="@style/EditTextRounded"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:hint="@string/contrase_a" />
        </LinearLayout>

        <Button
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/aclonica"
            android:text="@string/registrate"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:layout_width="340dp"
            android:layout_height="80dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/aclonica"
            android:text="@string/inicia_sesi_n_con_google"
            android:textAlignment="viewEnd"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:icon="@drawable/google"
            app:iconSize="40dp"
            app:iconTint="@null" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>