<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_logo_login"
            android:layout_width="170dp"
            android:layout_height="170dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.303"
            app:srcCompat="@drawable/logo" />

        <LinearLayout
            android:id="@+id/ly_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="fill_vertical"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/iv_email"
                style="@style/EditTextRoundedCircle"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="40dp"
                android:background="@color/black"
                app:srcCompat="@drawable/avatar" />

            <EditText
                android:id="@+id/edt_email_login"
                style="@style/EditTextRounded"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:hint="@string/correo_electronico"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.073" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="fill_vertical"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_password"
                style="@style/EditTextRoundedCircle"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="40dp"
                android:background="@color/white"
                app:srcCompat="@drawable/llave" />


            <EditText
                android:id="@+id/edt_pass_login"
                style="@style/EditTextRounded"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:hint="@string/contrase_a"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.073" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_buttonLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_ingresar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/btn_ingresar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/aclonica"
                android:text="@string/ingresar"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_registrarse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/btn_registrarse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/aclonica"
                android:text="@string/registrarse"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_google"
            android:layout_width="340dp"
            android:layout_height="80dp"
            android:layout_marginVertical="40dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/aclonica"
            android:text="@string/inicia_sesi_n_con_google"
            android:textAlignment="viewEnd"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:icon="@drawable/google"
            app:iconSize="40dp"
            app:iconTint="@null" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
